// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobListItem Renders for failed execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for failed schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for running execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for running schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for successful execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for successful schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_fxk0enj"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
     
    <WithStyles(CheckCircleIcon) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div
      className="bold_f1wf24vo"
    >
      <LearnMoreLink
        href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
        noUnderline={true}
        secondary={true}
        text="notebook abcd"
      />
    </div>
    <div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_fbrfhdq"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fxwamzl"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
